--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,18 @@
       margin: 1rem;
     }
 
+    .projects-btn {
+      padding-top: 1rem;
+    }
+
+    .card-footer {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      
+    }
+
 
     .contacts-container {
       min-height: 100vh;
@@ -127,6 +139,11 @@
       
       
     }
+
+    .projects-btn {
+      padding-left: 1rem;
+    }
+  
 
     .contacts-container {
       min-height: 100vh;
@@ -233,6 +250,9 @@
       height: 10rem;      
     }
 
+    .projects-btn {
+      padding-right: 1rem;
+    }
 
     .email-icon {
       padding-left: 10rem;
@@ -338,6 +358,3 @@
 }
 
 
-.projects-btn {
-  padding-right: 1rem;
-}
