--- a/src/App.css
+++ b/src/App.css
@@ -17,11 +17,20 @@
     background-image: url("/public/desktop-wallpaper-portfolio.jpg");
     background-size: cover;
     min-height: 100vh; 
+    background-color: #171923;
+  color: white;
     
+    }
+
+    .nav {
+      background-color: #171923;
+      color: white;
     }
 
     .about {
       min-height: 100vh;
+      background-color: #1a202c;
+  color: white;
       
     }
 
@@ -35,6 +44,8 @@
       flex-direction: column;
       align-items: center;
       min-height: 100vh;
+      background-color: #1a202c;
+      color: white;
     }
 
 
@@ -51,13 +62,19 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      background-color: #2d3748;
       
     }
 
+    .card-body {
+      background-color: #2d3748;
+      color: white;
+    }
 
     .contacts-container {
       min-height: 100vh;
       padding-top: 3rem;
+      background-color: #1a202c;
       
     }
 
