--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,10 @@
       color: white;
     }
 
+    .box-menu {
+      background-color: #2d3748;
+    }
+
     .about {
       min-height: 100vh;
       background-color: #1a202c;
