--- a/src/App.css
+++ b/src/App.css
@@ -21,16 +21,16 @@
     
     }
 
-    /* .nav {
+    .nav {
       background-color: #171923;
       color: white;
-    } */
+    }
 
 
     .about {
       min-height: 100vh;
-      /* background-color: #1a202c;
-      color: white; */
+      background-color: #1a202c;
+      color: white;
       
     }
 
@@ -44,8 +44,8 @@
       flex-direction: column;
       align-items: center;
       min-height: 100vh;
-      /* background-color: #1a202c;
-      color: white; */
+      background-color: #1a202c;
+      color: white;
     }
 
 
@@ -62,19 +62,19 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      /* background-color: #2d3748; */
+      background-color: #2d3748;
       
     }
 
     .card-body {
-      /* background-color: #2d3748; */
+      background-color: #2d3748;
       color: white;
     }
 
     .contacts-container {
       min-height: 100vh;
       padding-top: 3rem;
-      /* background-color: #1a202c; */
+      background-color: #1a202c;
       
     }
 
@@ -321,8 +321,6 @@
 
 .contact-heading {
   color: #08fdd8;
-  /* justify-content: center;
-  margin-top: 1.5rem */;
 }
 
 .certificate {
