--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,10 @@
       color: white;
     }
 
+    .css-gj4cpn {
+      background-color: #171923 !important;
+    }
+
 
     .about {
       min-height: 100vh;
